<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.RegisterActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:padding="0dp"
        android:layout_height="wrap_content">


        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/crearCuenta"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_marginTop="30dp"
            app:met_floatingLabel="normal"
            android:hint="@string/usuario"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:inputType="textFilter"
            android:textColor="@color/colorPrimaryDark"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            app:met_floatingLabel="normal"
            android:hint="@string/email"
            android:textColor="@color/colorPrimaryDark"
            />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            app:met_floatingLabel="normal"
            android:hint="@string/contraseña"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp"
            />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:id="@+id/button_registrar"
            android:background="@drawable/activity_drawable_azul_acrylic"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"/>



    </LinearLayout>

</RelativeLayout>