<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.ChangeEmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="100dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/cambiarEmail"
            android:layout_marginTop="60dp"/>



        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:met_floatingLabel="normal"
            android:hint="@string/introducirEmail"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:met_floatingLabel="normal"
            android:hint="@string/contraseña"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="320dp"
            android:text="@string/aplicarCambios"
            android:id="@+id/button_aplicar"
            android:background="@drawable/activity_drawable_azul_acrylic"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

</RelativeLayout>