<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activitys.StartActivity">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
                android:background="@mipmap/ic_logo_btsd_1_round"/>

        <Button
            android:id="@+id/login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/activity_drawable_azul_acrylic"
            android:layout_marginTop="100dp"
            android:text="@string/login"
            android:textColor="@color/colorBlanco"/>



        <Button
            android:id="@+id/registrarse"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/activity_drawable_azul_acrylic"
            android:text="@string/registrarse"
            android:textColor="@color/colorBlanco"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="10sp"
            android:layout_marginTop="50dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Author by"
                    android:textSize="10sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/Autor"
                    android:textSize="10sp"
                    android:textStyle="bold" />
        </LinearLayout>







</LinearLayout>