<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout" />



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:padding="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0sp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_marginTop="0dp"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:progress="5"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/logearse"
            android:layout_marginTop="60dp"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            app:met_floatingLabel="normal"
            android:hint="@string/email"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            app:met_floatingLabel="normal"
            android:hint="@string/contraseña"/>


        <Button
            android:layout_height="wrap_content"
            android:layout_width="320dp"
            android:text="@string/iniciarSesion"
            android:id="@+id/button_iniciarSesion"
            android:background="@drawable/border_rectangle"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</RelativeLayout>